bat.bool1.monkeytrouble.MonkeyTrouble.scala.code
def monkeyTrouble(aSmile:Boolean, bSmile:Boolean): Boolean = {
   return ((asmile&&bsmile)||((!asmile)&&(!bsmile))
}